--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 p {
 color:white;
-	 
+
 }
 
 img.center {
  display:block;
  margin-left:auto;
  margin-right:auto;
-	
+
 }
 
 header {
 	text-align:center;
-	
+
 }
 
 
@@ -23,13 +23,13 @@ a {
 	font:bolder;
 	text-shadow:2px 2px black;
 	padding:6px;
-	
+
 }
 header a.hover {
 	text-align: center;
 	background-color:transparent;
-	
-	
+
+
 }
 
 h1 {
@@ -37,12 +37,12 @@ h1 {
 }
 
 body {
-	background-image:url("images/fightingRingBackground.jpg");
-	
+	background-image:url("images/fbay.jpg");
+
 }
 
 footer {
-	
+
 	text-align:center;
-	
+
 }
